--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,15 @@ h1 {
 .hero {
   padding-top: 200px;
   padding-bottom: 280px;
-  background-color: var(--accent-color);
+  background-image: linear-gradient(
+      to bottom,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/hero/Header-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
@@ -169,7 +177,7 @@ h1 {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--title-light-theme-color);
+  color: #ffffff;
   margin-bottom: 30px;
 }
 
@@ -178,6 +186,8 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 /* О НАС */
@@ -289,6 +299,13 @@ h3 {
   justify-content: center;
 }
 
+.team-list-item {
+  background: #ffffff;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .team-list-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -333,10 +350,28 @@ h3 {
 .social-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 24px;
+  max-width: 206px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 16px;
+}
+
+.social-list-item {
+  max-width: 206px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
 
 .social-list-item:not(:last-child) {
   margin-right: 10px;
+}
+
+.social-media-link-item-svg {
+  width: 20px;
+  height: 20px;
 }
 
 /* OUR CLIENTS */
@@ -541,6 +576,11 @@ h3 {
   height: 404px;
   margin-right: 30px;
   margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .list-portfolio-items:nth-child(3n) {
