--- a/css/styles.css
+++ b/css/styles.css
@@ -384,9 +384,22 @@ h3 {
   height: 20px;
 }
 
+.social-list-item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
 .social-list-item-link:hover {
   background-color: #2196f3;
 }
+
+.social-list-item-link-svg {
+  fill: #afb1b8;
+}
+
 .social-list-item-link:hover .social-list-item-link-svg {
   fill: #ffffff;
 }
