--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,75 @@ h3 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.social-links-item-link:nth-child(1) .footer-list-item-link-svg {
+  width: 20px;
+  height: 20px;
+}
+.social-links-item-link:nth-child(2) .footer-list-item-link-svg {
+  width: 20px;
+  height: 20px;
+}
+.social-links-item-link:nth-child(3) .footer-list-item-link-svg {
+  width: 20px;
+  height: 20px;
+}
+.social-links-item-link:nth-child(4) .footer-list-item-link-svg {
+  width: 20px;
+  height: 20px;
+}
+
+.social-links-item-link:not(:last-child) {
+  margin-right: 10px;
+}
+
+.desctext {
+  margin-bottom: 20px;
+}
+/*
+.clients-link-list:hover {
+  background-color: #2196f3;
+}
+
+.footer-link-list:hover {
+  border-color: #2196f3;
+}
+.footer-link-list:hover .footer-list-item-link-svg {
+  fill: #ffffff;
+}
+
+.footer-link-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+*/
+
+.footer-link-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-link-list:hover {
+  background-color: #2196f3;
+}
+
+.footer-list-item-link-svg {
+  fill: #afb1b8;
+}
+
+.footer-link-list:hover .footer-list-item-link-svg {
+  fill: #ffffff;
 }
 
 /* PORTFOLIO */
