--- a/css/styles.css
+++ b/css/styles.css
@@ -75,11 +75,6 @@ img {
   margin-right: 50px;
 }
 
-.navigation-list-link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
 .logo-img {
   margin-right: 85px;
   text-decoration: none;
@@ -109,6 +104,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-light-theme-color);
+  padding-top: 32px;
 }
 
 .header-tel-link {
@@ -155,12 +151,18 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 28px;
   width: 100%;
+  margin-top: 28px;
+}
+
+.header-footer-mail {
+  width: 16px;
+  height: 14px;
+  margin-right: 10px;
+  fill: #757575;
 }
 
 /* HERO Section */
-/* изменил цвет заголовка чтобы он был пока что виден на белом фоне */
 
 h1 {
   margin: 0px;
@@ -592,7 +594,7 @@ h3 {
 }
 
 .footer-list-item-link-svg {
-  fill: #afb1b8;
+  fill: #ffffff;
 }
 
 .footer-link-list:hover .footer-list-item-link-svg {
@@ -692,6 +694,14 @@ h3 {
   margin-bottom: 30px;
   background: #ffffff;
   border: 1px solid #eeeeee;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+}
+
+.list-portfolio-items:hover {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
   box-sizing: border-box;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -713,6 +723,9 @@ h3 {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  padding-top: 20px;
+  padding-left: 24px;
+  margin-bottom: 4px;
 }
 
 .product-list-item-link {
@@ -727,7 +740,7 @@ h3 {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
-  margin: 0px;
+  padding-left: 24px;
 }
 
 .list-portfolio-items:nth-last-child(-n + 3) {
